#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-23
2014-03-26 David
- report start,end and processing time
- report on non default values from configuration

Tag: V00-00-22
2014-03-26 David
- fix bug L3T::Data, treat all Event level Pds::Src as equal.
	
Tag: V00-00-21
2014-03-25 David
- fix bug with what calibstore data to associate with cspad2x2
- update unittest
	
Tag: V00-00-20
2014-03-25 David
- support for const ndarrays
- add translation of calibStore data
- added option to skip calibrated data
- add option to skip calibStore data
- replaced ndarray and string key filtering with general key filtering
	
Tag: V00-00-19
2014-03-10 David
- update for psddldata V01-00-05

Tag: V00-00-18
2014-03-05 Andy
- update for psddldata V01-00-04

Tag: V00-00-17
2014-02-26 Andy
- write-ndarray-to-h5-example.cpp: Env constructor argument have changed,
  need to update the code for new interface

Tag: V00-00-16
2014-02-12 David Schneider
- regenerate whole thing from psddldata V01-00-03 with psddl V00-13-06
- change a diagnostic message, change group name for Event level Source
	
Tag: V00-00-15
2014-02-03 David Schneider
- change default value for store_epics 
- add type_filter option 
- add ddl_Translator to generate ddl depedenent code

Tag: V00-00-14
2014-01-15 David Schneider
- fix bug with when scr_filter is initialized
- add unit test for writing Alias Config
- move codegen template from psddl package here

Tag: V00-00-13
2014-01-14 David Schneider
- use AliasMap to create h5 soft links for Pds::Src groups

Tag: V00-00-12
2014-01-14 David Schneider
- removing test xtc files from the data subdirectory.

Tag: V00-00-11