@@ -48,14 +48,24 @@ store_epics = calib_repeat
 # By default, all xtc data is Translated and many ndarrays that user modules (if any) 
 # add are translated. Filtering can occur in either the code of user modules, or
 # through options in the psana.cfg file. Here in the config file, different groups of 
-# data can be filtered. There are two options for filtering xtc data: type filtering or 
-# source filtering. Type filtering is based on sets of Psana data types. If you know 
-# what detectors or devices to filter, leave type filtering alone and go to src_filter. 
+# data can be filtered. There are four options for filtering data: 
 #
-# When the translator sees new data, it first checks if it is a known type that
-# has not been filtered. For unfiltered known types, the translator next checks
-# if there is a filter on the Source. Finally, for ndarray's and strings, it checks 
-# if there is a filter on the key string that identifies the data in the Psana event store.
+#    type filtering   -  for example, exclude all cspad, regardless of the detector source
+#    source filtering -  for example, exclude any data from a given detector source
+#    key filtering    -  for example, include only ndarrays with a given key string
+#    calibration      -  do not translate original xtc if a calibrated version is found
+#
+# Type filtering is based on sets of Psana data types. If you know what detectors or 
+# devices to filter, leave type filtering alone and go to src_filter. 
+#
+# Type filtering has the highest precedence, then key filtering, then source 
+# filtering, and lastly calibration filtering. When the Translator sees new data, 
+# it first checks the type filter. If it is a filtered type (or unknown type) no further 
+# translation occurs with the data - regardless of src or key. For data that gets 
+# past the type filter, the Translator looks at the src and key. If the key 
+# string is empty, it checks the source filter. Data with non empty key strings are 
+# handled via the key filter. Data with the special calibration key string are handled via the 
+# calibration filtering. 
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # TYPE FILTERING 
